@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.1-0.001
-Date: 2023-03-15
+Version: 3.1-0.002
+Date: 2023-03-16
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
