@@ -1,7 +1,9 @@
 
-        CHANGES IN spatstat.explore VERSION 3.1-0.001
+        CHANGES IN spatstat.explore VERSION 3.1-0.002
 
 OVERVIEW
+
+    o Changed the calculation of standard errors.
 
     o Bug fixes.
 
@@ -9,6 +11,10 @@ SIGNIFICANT USER-VISIBLE CHANGES
 
     o density.ppp
     Standard error calculation is now available with any smoothing kernel.
+
+    o density.ppp
+    The interpretation of 'weights' in the calculation of standard error
+    has changed. New argument 'wtype' controls this interpretation.
     
     o bw.relrisk.ppp
     Additional arguments '...' are now passed to 'density.ppp'.
@@ -16,7 +22,7 @@ SIGNIFICANT USER-VISIBLE CHANGES
 BUG FIXES
 
     o density.ppp
-    Calculation of standard error was incorrect if edge=TRUE.
+    Calculation of standard error was slightly incorrect if edge=TRUE.
     Fixed.
     
     o relrisk.ppp
